ISAICP-5382: Fix checkboxes alignment in the subscription form

--- a/web/themes/joinup/prototype/sass/components/_form.sass
+++ b/web/themes/joinup/prototype/sass/components/_form.sass
@@ -211,11 +211,10 @@
 
 // My subscriptions form
 .form__subscribe-types
-  background: #fff
-  padding: 20px
+  margin-bottom: 0
   .form-item
     flex: 1 100%
-    padding-bottom: 20px
+    margin-bottom: $tile-margin
     select
       width: 100%
   .form__subscribe-save
@@ -224,18 +223,17 @@
   +breakpoint(mobile)
     .form-item
       flex: 1 50%
-  +breakpoint(tablet)
-    .form-item
-      flex: 1 25%
-      max-width: 25%
+  +breakpoint(desktop)
+    .form__subscribe-save
+      flex: 1 100%
   +breakpoint(lg-desktop)
     .form-item
-      flex: 1 18%
-      max-width: 18%
-      padding-bottom: 0
+      flex: 0 1 auto
+      margin-bottom: 0
+      margin-right: $tile-margin
     .form__subscribe-save
-      flex: 1 28%
-      max-width: 28%
+      flex: 0 1 auto
+      margin-left: auto
 
 .form__subscribe-types-inner
   display: flex
@@ -255,15 +253,13 @@
     .form__subscribe-save
       flex: 1 28%
       max-width: 28%
+      text-align: right
 
 .form__subscribe-actions
   text-align: right
   margin-right: 0
   .button
     margin-right: 0
-
-.form__subscribe-save
-  text-align: right
 
 // States
 // --------------------------------------------------
